add model, repository, controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/spt
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
+#Hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
+# to generate sql queries for chosen database
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto=update
+# to generate database table automatically by using hibernate feature
+# update to - create table if it is not created
+
+# logging.level.org.hibernate.SQL=DEBUG
+# to see hibernate related queries
